--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,7 @@
+* {
+  margin: 0;
+  padding: 0;
+}
 body {
   background-color: black;
   color: wheat;
@@ -8,19 +12,53 @@ body {
   justify-content: space-around;
   list-style: none;
 }
-.gallery-list li:not(:nth-child(even)){
+.gallery-list li:not(:nth-child(even)) {
   margin-right: 20px;
 }
 
-.gallery-list li{
-  width: calc((100% - 20px)/2);
+.gallery-list li {
+  width: calc((100% - 20px) / 2);
+  margin-bottom: 30px;
 }
 video {
   display: block;
   width: 100%;
   height: auto;
 }
-.list{
+.list {
   display: flex;
-  justify-content: space-around;
+  flex-flow: row wrap;
+
+  justify-content: space-evenly;
+}
+.load-btn {
+  display: block;
+  margin: 50px auto;
+  padding: 10px 20px;
+  background-color: black;
+  border: 1px solid wheat;
+  color: wheat;
+}
+.load-btn.is-hiden {
+  display: none;
+}
+
+.gallery-input {
+  margin: 50px auto;
+  padding: 10px 20px;
+  background-color: black;
+  border: 1px solid wheat;
+  color: wheat;
+}
+.gallery-form {
+  display: block;
+}
+.gallery {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+}
+video {
+  width: 100%;
+  height: 100%;
 }
